<resources>
    <string name="app_name">Tech Support</string>
    <string name="create_ticket">Create Ticket</string>
    <!-- Strings related to login -->

    <string name="prompt_name">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dashboard">Ticket Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="choose_manufacturer">Choose Manufacturer :</string>
    <string name="choose_dealer_code">Choose Dealer Code :</string>
    <string name="pick_contact">Pick Contact</string>
    <string name="name">Name :</string>
    <string name="number">Number :</string>
    <string name="describe_the_ticket">Describe the ticket...</string>
    <string name="status">Status :</string>
    <string name="numberhint">Number</string>
    <string name="namehint">Name</string>
    <string name="save">SAVE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
