<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CreateTicketActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_manufacturer"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="sans-serif-medium"/>

                <Spinner
                    android:id="@+id/manufacturers_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="sans-serif-medium"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_dealer_code"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="sans-serif-medium"/>

                <Spinner
                    android:id="@+id/dealerships_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="sans-serif-medium"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/pick_contact_bt"
                        android:layout_width="246dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/pick_contact" />

                    <Switch
                        android:id="@+id/switch_contact_pick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="vertical">-->
                    <!--<android.support.design.widget.TextInputLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="@dimen/padding_half">-->

                        <!--<android.support.design.widget.TextInputEditText-->
                            <!--android:id="@+id/event_name_edit_text"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:hint="Name"-->
                            <!--android:textSize="@dimen/typography_subheading"-->
                            <!--android:inputType="textPersonName"-->
                            <!--android:textColorHint="@color/colorPrimaryDark"/>-->

                    <!--</android.support.design.widget.TextInputLayout>-->
                <!--</LinearLayout>-->



                <LinearLayout
                    android:id="@+id/nameFromContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textAlignment="viewStart"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/contact_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/numberFromContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="18sp" />

                </LinearLayout>


                <EditText
                    android:id="@+id/edit_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/namehint"
                    android:inputType="text"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/edit_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numberhint"
                    android:inputType="number"
                    android:visibility="gone" />


            </LinearLayout>


            <EditText
                android:id="@+id/TicketDesc"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_margin="0dp"
                android:layout_marginTop="96dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/describe_the_ticket"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/status_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textSize="18sp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/saveTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-medium"
                android:padding="8dp"
                android:text="SAVE"
                android:textSize="16sp" />

            <!--<Button-->
            <!--android:id="@+id/saveTicket"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_weight="1"-->

            <!--android:padding="8dp"-->
            <!--android:text="@string/save"-->
            <!--android:textSize="24sp"-->
            <!--android:textStyle="bold"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintHorizontal_bias="0.0"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout6"-->
            <!--app:layout_constraintVertical_bias="0.858" />-->


        </LinearLayout>
    </ScrollView>
</LinearLayout>